--- a/Makefile.in
+++ b/Makefile.in
@@ -11,7 +11,7 @@ include $(top_builddir)/Makeconf
 
 distdir = $(PACKAGE)-$(VERSION)
 INSTFILES = COPYING
-## plus NEWS, but need to wait until it is generated
+## plus NEWS and NEWS.pdf, but need to wait until they are generated
 NON_SVN_INSTFILES = SVN-REVISION
 DISTFILES = $(INSTFILES) \
 	ChangeLog INSTALL ONEWS OONEWS README VERSION \
@@ -82,7 +82,7 @@ install install-strip: installdirs svnonly
 	@for f in $(INSTFILES); do \
 	  $(INSTALL_DATA) $(srcdir)/$${f} "$(DESTDIR)$(rhome)"; \
 	done
-	@for f in NEWS $(NON_SVN_INSTFILES); do \
+	@for f in NEWS NEWS.pdf $(NON_SVN_INSTFILES); do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rhome)"; \
 	done
 @WANT_R_FRAMEWORK_TRUE@		$(MAKE) -f $(srcdir)/Makefile.fw top_srcdir=$(top_srcdir) $@
@@ -116,7 +116,7 @@ installdirs:
 uninstall:
 	@(for d in $(SUBDIRS); do rsd="$${d} $${rsd}"; done; \
 	  for d in $${rsd}; do (cd $${d} && $(MAKE) $@); done)
-	@for f in NEWS $(INSTFILES) $(NON_SVN_INSTFILES); do \
+	@for f in NEWS NEWS.pdf $(INSTFILES) $(NON_SVN_INSTFILES); do \
 	  rm -f "$(DESTDIR)$(rhome)/$${f}"; \
 	done
 	@rm -rf "$(DESTDIR)$(Rexecbindir)" "$(DESTDIR)$(rhome)/lib"
@@ -136,7 +136,7 @@ distclean: clean
 	  for d in $${rsd}; do (cd $${d} && $(MAKE) $@); done)
 	-@rm -rf bin include lib library modules gnome
 	@if test -f non-tarball ; then \
-	  rm -f $(NON_SVN_INSTFILES) NEWS non-tarball doc/FAQ doc/RESOURCES doc/html/resources.html doc/html/NEWS.html; \
+	  rm -f $(NON_SVN_INSTFILES) NEWS NEWS.pdf non-tarball doc/FAQ doc/RESOURCES doc/html/resources.html doc/html/NEWS.html; \
 	fi
 	@if test "$(BUILDDIR_IS_SRCDIR)" = no ; then \
 	  rm -f $(NON_SVN_INSTFILES); \
@@ -173,7 +173,7 @@ distdir: $(DISTFILES) vignettes
 	    || ln $(srcdir)/$${f} $(distdir)/$${f} 2>/dev/null \
 	    || cp -p $(srcdir)/$${f} $(distdir)/$${f}; \
 	done
-	@for f in NEWS $(NON_SVN_INSTFILES) ; do \
+	@for f in NEWS NEWS.pdf $(NON_SVN_INSTFILES) ; do \
 	  cp -p $${f} $(distdir)/$${f}; \
 	done
 	@for d in $(SUBDIRS); do \
