tweaks to NEWS.pdf
git-svn-id: https://svn.r-project.org/R/trunk@52472 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -46,12 +46,14 @@ NEWS.rds: $(srcdir)/NEWS.Rd
 	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$(srcdir)/NEWS.Rd\"), stages = 'install'), 'NEWS.rds')" | $(R_EXE)
 
 ../NEWS: NEWS.rds
+	@$(ECHO) "making NEWS"
 	@$(ECHO) 'options(warn=1);tools:::Rd2txt_NEWS_in_Rd("NEWS.rds", "../NEWS")' |  $(R_EXE)
 
 html/NEWS.html: NEWS.rds
 	@$(ECHO) 'options(warn=1);tools:::Rd2HTML_NEWS_in_Rd("NEWS.rds", "html/NEWS.html")' |  $(R_EXE)
 
 ../NEWS.pdf: NEWS.rds
+	@$(ECHO) "making NEWS.pdf"
 	@$(ECHO) 'options(warn=1);tools:::Rd2pdf_NEWS_in_Rd("NEWS.rds", "../NEWS.pdf")' |  $(R_EXE)
 
 
