Make similar changes to CHANGES as were made to NEWS:  age all the CHANGESn files, convert the newest to Rd.
Make the help pages and download pages point to the HTML versions of NEWS and CHANGES.

git-svn-id: https://svn.r-project.org/R/trunk@52488 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/cran/Makefile
+++ b/src/gnuwin32/cran/Makefile
@@ -17,8 +17,8 @@ DATE = $(shell date +%F)
 REXE = $(R_HOME)/$(BINDIR)/rterm.exe --vanilla --slave
 
 all:
-	$(CP) ../CHANGES CHANGES.$(RPREFIX)
-	$(CP) ../../../NEWS NEWS.$(RPREFIX)
+	$(CP) ../../../doc/html/CHANGES.html CHANGES.$(RPREFIX).html
+	$(CP) ../../../doc/html/NEWS.html NEWS.$(RPREFIX).html
 	$(CP) ../installer/$(RPREFIX)-win*.exe .
 	($(ECHO) 'cat(md5sum("$(RPREFIX)-win$(BITSIZE).exe"),"*$(RPREFIX)-win$(BITSIZE).exe")' \
          | $(REXE) R_DEFAULT_PACKAGES=tools > md5sum.txt)
