--- a/doc/Makefile.win
+++ b/doc/Makefile.win
@@ -8,12 +8,19 @@ include ../src/gnuwin32/MkRules
 
 R_EXE=../$(BINDIR)/Rterm --vanilla --slave
 
-all: NEWS.rds html/NEWS.html ../NEWS
+all: NEWS.rds html/NEWS.html ../NEWS CHANGES CHANGES.rds html/CHANGES.html
 
 NEWS.rds: NEWS.Rd
 	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
 
+CHANGES.rds: ../src/gnuwin32/CHANGES.Rd
+	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
+
 ../NEWS: NEWS.rds
+	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
+	  $(R_EXE) LC_ALL=C
+
+CHANGES: CHANGES.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
 	  $(R_EXE) LC_ALL=C
 
@@ -21,5 +28,9 @@ html/NEWS.html: NEWS.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2HTML_NEWS_in_Rd(\"$<\", \"$@\")" | \
 	  $(R_EXE)
 
+html/CHANGES.html: CHANGES.rds
+	@$(ECHO) "options(warn=1);tools:::Rd2HTML_NEWS_in_Rd(\"$<\", \"$@\")" | \
+	  $(R_EXE)
+	  
 clean:
-	@rm -f NEWS.rds html/NEWS.html ../NEWS
+	@rm -f NEWS.rds html/NEWS.html ../NEWS CHANGES.rds html/CHANGES.html
