--- a/src/gnuwin32/cran/index.in
+++ b/src/gnuwin32/cran/index.in
@@ -40,7 +40,7 @@
   <p><a href="@RWVER@-win.exe">Download R @RVER@ for Windows</a> <span>(37 megabytes, 32/64 bit)</span></p>
   <ul>
     <li><a href="../../windows/base/README.@RWVER@">Installation and other instructions</a></li>
-    <li>New features in this version: <a href="../../windows/base/CHANGES.@RWVER@">Windows specific</a>, <a href="../../windows/base/NEWS.@RWVER@">all platforms</a>.</li>
+    <li>New features in this version: <a href="CHANGES.@RWVER@.html">Windows specific</a>, <a href="NEWS.@RWVER@.html">all platforms</a>.</li>
   </ul>
 </div>
 
