allow for new w64 no-underscore convention
git-svn-id: https://svn.r-project.org/R/trunk@52518 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -49,6 +49,10 @@ WIN = 32
 # define to -DW64 if using MinGW-w64 (32- or 64-bit)
 DEFS_W64 =
 
+# pattern for symbols: 
+# remove underline for versions of MinGW-w64 from about 2010-06
+SYMPAT = 's/^.* [BCDRT] _/ /p'
+
 # set to use ICU (experimental)
 # USE_ICU=YES
 # path to parent of ICU headers
