--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -52,11 +52,17 @@ NEWS.rds: $(srcdir)/NEWS.Rd
 html/NEWS.html: NEWS.rds
 	@$(ECHO) 'options(warn=1);tools:::Rd2HTML_NEWS_in_Rd("NEWS.rds", "html/NEWS.html")' |  $(R_EXE)
 
+PDFLATEX = @PDFLATEX@
+## needs pdflatex (and more)
 ## Need LC_COLLATE to work around the misuse of [A-z] in texi2dvi 1.135
 ## (as reported by MM)
 ../NEWS.pdf: NEWS.rds
-	@$(ECHO) "creating NEWS.pdf"
-	@$(ECHO) 'options(warn=1);tools:::Rd2pdf_NEWS_in_Rd("NEWS.rds", "../NEWS.pdf")' |  LC_COLLATE=C $(R_EXE)
+	@if test -z "$(PDFLATEX)"; then \
+	  $(ECHO) "'pdflatex' is needed but missing on your system."; \
+	else \
+	 $(ECHO) "creating NEWS.pdf"; \
+	 $(ECHO) 'options(warn=1);tools:::Rd2pdf_NEWS_in_Rd("NEWS.rds", "../NEWS.pdf")' |  LC_COLLATE=C $(R_EXE); \
+	fi
 
 
 install: install-message installdirs install-sources install-sources2 install-man
