--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -122,11 +122,11 @@ fixups:
 ifeq ($(strip $(WIN)),64)
 ifneq ($(strip $(HOME32)),)
 	@echo "------------ including 32-bit files"
-	(cd $(HOME32); zip -qr9X 32bit */i386 library/*/libs/i386 bin/R.exe bin/Rscript.exe)
-	unzip -qo $(HOME32)/32bit -d $(RPREFIX)
-	rm $(HOME32)/32bit.zip
+	(cd "$(HOME32)"; zip -qr9X 32bit */i386 library/*/libs/i386 bin/R.exe bin/Rscript.exe)
+	unzip -qo "$(HOME32)/32bit" -d $(RPREFIX)
+	rm "$(HOME32)/32bit.zip"
 	mkdir -p $(RPREFIX)/Tcl
-	$(CP) -prf $(HOME32)/Tcl/bin $(HOME32)/Tcl/lib $(RPREFIX)/Tcl
+	$(CP) -prf "$(HOME32)/Tcl/bin" "$(HOME32)/Tcl/lib" $(RPREFIX)/Tcl
 	for f in $(R_PKGS_RECOMMENDED); do \
 	   sed -e 's/Archs: x64/Archs: i386, x64/' \
              ../../../library/$${f}/DESCRIPTION \
