clean up better
git-svn-id: https://svn.r-project.org/R/trunk@52579 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -129,7 +129,7 @@ COPYRIGHTS: ../../doc/COPYRIGHTS COPYRIGHTS.win
 
 
 fixfiles: 
-	@$(MKDIR) -p ../../$(BINDIR) ../../bin
+	@$(MKDIR) -p ../../$(BINDIR)
 	@$(MK) -C ./fixed
 
 fixed/fixdesc:
@@ -249,7 +249,7 @@ distclean: clean
 	  $(MAKE) -C ../extra/$${d} -f Makefile.win distclean; \
 	done
 	@$(MAKE) -C ../../tests -f Makefile.win distclean RHOME=$(RHOME)
-	$(RM) -r ../../$(BINDIR) ../../include ../../lib ../../library ../../modules
+	$(RM) -r ../../bin ../../include ../../lib ../../library ../../modules
 	$(RM) ../include/config.h ../include/iconv.h ../include/psignal.h \
 	../include/Rconfig.h ../include/Rversion.h ../include/Rmath.h \
 	../include/libintl.h
