--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -49,9 +49,11 @@ WIN = 32
 # define to -DW64 if using 32-bit MinGW-w64
 DEFS_W64 =
 
-# pattern for symbols on 64-bit
-# remove underline for versions of MinGW-w64 from about 2010-05
+# pattern for symbols on 64-bit builds only
+# for older toolchains which use a leading underscore
 SYMPAT64 = 's/^.* [BCDRT] _/ /p'
+# for versions of MinGW-w64 from about 2010-05
+# SYMPAT64 = 's/^.* [BCDRT] / /p'
 
 # set to use ICU (experimental)
 # USE_ICU=YES
