switch x64 Windows to defaulting to a no-underscore toolchain
git-svn-id: https://svn.r-project.org/R/trunk@52589 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -51,9 +51,9 @@ DEFS_W64 =
 
 # pattern for symbols on 64-bit builds only
 # for older toolchains which use a leading underscore
-SYMPAT64 = 's/^.* [BCDRT] _/ /p'
+# SYMPAT64 = 's/^.* [BCDRT] _/ /p'
 # for versions of MinGW-w64 from about 2010-05
-# SYMPAT64 = 's/^.* [BCDRT] / /p'
+SYMPAT64 = 's/^.* [BCDRT] / /p'
 
 # set to use ICU (experimental)
 # USE_ICU=YES
