Use share/texmf/bibtex/bib for bibinputs.
git-svn-id: https://svn.r-project.org/R/trunk@52993 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/Rcmd.in
+++ b/src/scripts/Rcmd.in
@@ -21,6 +21,12 @@ else
   TEXINPUTS=".:${TEXINPUTS}:${R_SHARE_DIR}/texmf/tex/latex:"
 fi
 export TEXINPUTS
+if test -z "${BIBINPUTS}"; then
+  BIBINPUTS=".:${R_SHARE_DIR}/texmf/bibtex/bib:"
+else
+  BIBINPUTS=".:${BIBINPUTS}:${R_SHARE_DIR}/texmf/bibtex/bib:"
+fi
+export BIBINPUTS
 if test -z "${BSTINPUTS}"; then
   BSTINPUTS=".:${R_SHARE_DIR}/texmf/bibtex/bst:"
 else
