--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -147,7 +147,7 @@ R.dll: $(OBJS) $(OBJS-EXTRA) $(MAINLIBS) $(EXTRALIBS) dllversion.o
 R.exp: $(OBJS) $(OBJS-EXTRA) $(MAINLIBS) $(EXTRALIBS) dllversion.o
 	@$(ECHO) LIBRARY R.dll > R.exp
 	@$(ECHO) EXPORTS >> R.exp
-	@$(NM) $^ | $(SED) -n "$(SYM_PAT)" | $(SORT) | uniq > R0.def
+	@$(NM) $^ | $(SED) -n $(SYMPAT) | $(SORT) | uniq > R0.def
 	@comm -23 R0.def Rdll.hide >> R.exp
 	@$(RM) R0.def
 
