clean up setting some make/env variables
git-svn-id: https://svn.r-project.org/R/trunk@53049 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -1,6 +1,10 @@
 # Makefile for R for Windows Installers
 
 include ../MkRules
+
+## Formerly in MkRules
+FIND = find
+
 R_HOME = ../../..
 ## for TCL_HOME
 RHOME = ../../..
@@ -162,7 +166,7 @@ files.wxs: imagedir fixups md5sums
 	"$(WIXDIR)/tallow" -1 -d $(RPREFIX) > $@
 
 R.wxs: WIXins.pl uuids files.wxs
-	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
+	perl WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
 
 ## for WiX 3.0 light uses -ext WixUIExtension
 ## To change compression with WiX 3.0 use
