--- a/etc/Renviron.in
+++ b/etc/Renviron.in
@@ -41,8 +41,7 @@ TAR=${TAR-'@TAR@'}
 WHICH=${WHICH-'@WHICH@'}
 
 ## No longer used in R
-AWK=${AWK-'awk'}
-PERL=${PERL-'perl'}
+# PERL=${PERL-'perl'}
 
 @BUILD_AQUA_FALSE@R_LIBS_USER=${R_LIBS_USER-'~/R/@R_PLATFORM@-library/@MAJ_MIN_VERSION@'}
 @BUILD_AQUA_TRUE@R_LIBS_USER=${R_LIBS_USER-'~/Library/R/@MAJ_MIN_VERSION@/library'}
