attempt to get messages in English
git-svn-id: https://svn.r-project.org/R/trunk@53196 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Examples/Makefile.in
+++ b/tests/Examples/Makefile.in
@@ -17,7 +17,7 @@ INSTFILES = \
   stats-Ex.Rout.save stats4-Ex.Rout.save tools-Ex.Rout.save
 DISTFILES = Makefile.in  Makefile.win $(INSTFILES)
 
-R_EXE = $(top_builddir)/bin/R --slave --vanilla
+R_EXE = LANGUAGE=en LC_TIME=C $(top_builddir)/bin/R --slave --vanilla
 
 all: Makefile test-Examples-Base
 
