--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -106,12 +106,12 @@ reg-plot.Rout: reg-plot.R
 	-@diff -b reg-plot.ps $(srcdir)/reg-plot.ps.save
 	@$(ECHO) "$(ECHO_T) OK"
 
-## allow this to fail, as it must if the locale does not support Latin-1 chars
+## allow this to fail, as it may if the locale does not support Latin-1 chars
 ## we can't use Rdiff as MacOS tr crashes on latin-1 chars in a UTF-8 locale
 reg-plot-latin1.Rout: reg-plot-latin1.R
 	@rm -f $@ $@.fail
 	@$(ECHO) "running tests of plotting Latin-1"
-	@$(ECHO) "  expect failure or some differences if not in a Latin or UTF-8 locale"
+	@$(ECHO) "  expect failure or some differences if not in a Latin-1 or UTF-8 locale"
 	@$(ECHO) $(ECHO_N) "running code in '$<' ...$(ECHO_C)"
 	@$(R2) < $< > $@ 2>&1 || mv $@ $@.fail
 	@if test -f $@.fail; then \
