move Rdiff to R code (as on Windows)
git-svn-id: https://svn.r-project.org/R/trunk@53204 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/Makefile.in
+++ b/src/scripts/Makefile.in
@@ -11,11 +11,11 @@ subdir = src/scripts
 include $(top_builddir)/Makeconf
 
 ## don't add '#! R_SHELL' for scripts intend to be run by 'R CMD script'
-SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv Rprof \
+SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv Rdiff Rprof \
   SHLIB Stangle Sweave build check config javareconf rtags
 ## <NOTE>
 ## Need target rules for all elements of SCRIPTS_B_IN/SCRIPTS_B.
-SCRIPTS_B_IN = Rcmd.in Rdiff.in f77_f2c.in mkinstalldirs.in pager.in
+SCRIPTS_B_IN = Rcmd.in f77_f2c.in mkinstalldirs.in pager.in
 SCRIPTS_B = $(SCRIPTS_B_IN:.in=)
 ## </NOTE>
 
@@ -39,8 +39,6 @@ R: $(SCRIPTS_B) R.fe
 ## rules ('%:%.in') are not portable, and some versions of Make do not
 ## allow separated dependencies for single suffix rules.
 Rcmd: $(srcdir)/Rcmd.in $(top_builddir)/config.status
-	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-Rdiff: $(srcdir)/Rdiff.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 f77_f2c: $(srcdir)/f77_f2c.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
