small improvement to 64-bit-only installer
git-svn-id: https://svn.r-project.org/R/trunk@53360 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -47,7 +47,7 @@ GW_INFO_FILES = COPYRIGHTS README.Rterm rw-FAQ
 ETC_FILES = Rprofile.site Rconsole Rdevga rgb.txt repositories Rcmd_environ
 
 
-# we don't want share/{Makefile.in,java,perl,sh} installed
+# we don't want share/{Makefile.in,java,sh} installed
 SHARE_DIRS = R encodings licenses locale make texmf zoneinfo
 
 all: $(RPREFIX)-$(SUFF).exe
