--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -37,6 +37,7 @@ else
 	  -e "s|@SYMPAT@|$(SYMPAT)|" \
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 endif
+	$(CP) -p Makeconf $(R_HOME)
 	@$(ECHO) done > fixetc
 
 fixdoc: $(wildcard ../CHANGES?)
@@ -50,4 +51,4 @@ clean:
 	$(RM) *~ */*~ fixhtml fixbin fixetc fixshare fixdoc
 
 distclean:
-	$(RM) $(R_HOME)/doc/CHANGES*
+	$(RM) $(R_HOME)/doc/CHANGES* $(R_HOME)/Makeconf
