localize use of DEFINES
git-svn-id: https://svn.r-project.org/R/trunk@53403 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -8,7 +8,7 @@ ifdef DEBUG
 else
  DLLFLAGS=-s
 endif
-CPPFLAGS=-I../../include
+CPPFLAGS=-I../../include $(arch_DEFS)
 
 ## Increase stack size to 10Mb
 LARGE_STACK=-Wl,--stack=0xA00000
