make base packages in a way more like Unix
git-svn-id: https://svn.r-project.org/R/trunk@53405 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -342,7 +342,7 @@ link-recommended:
 
 recommended:
 	@$(ECHO) "--- Making recommended packages"
-	@$(MK) -C ../library/Recommended -f Makefile.win RHOME=$(RHOME)
+	@$(MK) -C ../library/Recommended -f Makefile.win R_HOME=$(RHOME)
 
 docfiles:
 	@$(MK) -f Makefile.docs
