revert non-yet change
git-svn-id: https://svn.r-project.org/R/trunk@53407 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -165,9 +165,8 @@ uuids: uuidgen.exe
 files.wxs: imagedir fixups md5sums
 	"$(WIXDIR)/tallow" -1 -d $(RPREFIX) > $@
 
-R.wxs: # WIXins.R  uuids files.wxs
-	Rscript WIXins.R $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
-	#perl WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
+R.wxs: WIXins.pl uuids files.wxs
+	perl WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
 
 ## for WiX 3.0 light uses -ext WixUIExtension
 ## To change compression with WiX 3.0 use
